feat: convert pdf

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>足球机器人基地V5++ Tutorials</title>
+  <title>足球机器人基地入门教程</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -20,11 +20,11 @@
       coverpage: true,
       auto2top: true,
       onlyCover: false,
-      name: 'V5++ Tutorials',
+      name: '足基入门教程',
       search: 'auto',
       subMaxLevel: 6,
       loadFooter: '_footer.md',
-      repo: 'https://github.com/npuv5pp/V5Tutorial',
+      repo: 'https://github.com/zzsqwq/soccer-base-tutorials',
       copyCode: {
          buttonText : '复制到剪切板',
          errorText  : '发生错误！',
